[workspace]
members = [
    "backtester",
    "backtester_playground",
    "bars_building",
    "binary_io",
    "binary_quotes_printer",
    "common",
    "concurrency_learning",
    "configuration",
    "count_quotes",
    "data_frame",
    "data_frame_playground",
    "data_verification",
    "db",
    "db_benchmark",
    "execution",
    "expression",
    "fs",
    "fs_benchmark",
    "genetic_programming",
    "hsb_agent",
    "hsb_agent_starter",
    "indicators",
    "indicators_building",
    "indicators_comparison",
    "orders_management",
    "performance_benchmarks",
    "performance_tests",
    "performance_tests_runner",
    "quotes_chart",
    "quotes_converter",
    "quotes_file_publisher",
    "quotes_server",
    "references_learning",
    "text_io",
    "text_io_playground",
    "text_to_binary",
]
