[package]
name = "backtester"
version = "0.1.0"
authors = ["Eduardo Yuschuk <eduardo.yuschuk@gmail.com>"]

[dependencies]
common = { path = "../common" }
configuration = { path = "../configuration" }
binary_io = { path = "../binary_io" }
serde_json = "1.0.26"
serde = "1.0.71"
serde_derive = "1.0.71"
