[package]
name = "bars_building"
version = "0.1.0"
authors = ["Eduardo Yuschuk <eduardo.yuschuk@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
configuration = { path = "../configuration" }
binary_io = { path = "../binary_io" }
serde = "1.0.71"
serde_derive = "1.0.71"
bincode = "1.0.1"
