[package]
name = "quotes_chart"
version = "0.1.0"
authors = ["Eduardo Yuschuk <eduardo.yuschuk@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.102"
serde_derive = "1.0.102"
rand = "0.7.2"
common = { path = "../common" }
configuration = { path = "../configuration" }
text_io = { path = "../text_io" }

[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["ttf","image","mixer"]
